<resources>
    <string name="app_name">Sistema SESEL</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Login ou Registro</string>
    <string name="action_sign_in_short">Identificação</string>
    <string name="error_invalid_email">Este e-mail não é válido!</string>
    <string name="error_invalid_password">Senha curta!</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo necessário</string>
    <string name="permission_rationale">"Permissão de acesso ao contatos é necessária para exibir completamento de email."
    </string>
    <string name="title_activity_config">Configuração</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_act_main">Sistema SESEL</string>
    <string name="lbl_arcondicionado">Ar Condicionado</string>
    <string name="lbl_eletricidade">Eletricidade</string>
    <string name="lbl_elevadores">Elevadores</string>
    <string name="lbl_automacao">Automação</string>
    <string name="lbl_sair">Sair</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_login">Login</string>
</resources>
